Changing of relative path to assets

--- a/client/home1.html
+++ b/client/home1.html
@@ -259,8 +259,8 @@
     <header>
         <nav>
             <div class="left-nav">
-                <div class="mr-4 top-bar-menu" style="cursor: pointer;"> <img src="/assets/images/top-menu/menu_4.png" class="side-menu-icon" alt="menu" style="width:45px"></div>
-                <div class="mobile-logo"> <img src="/assets/images/top-menu/sb_logo.png" alt="menu" class="" style="width:95px"></div>
+                <div class="mr-4 top-bar-menu" style="cursor: pointer;"> <img src="../assets/images/top-menu/menu_4.png" class="side-menu-icon" alt="menu" style="width:45px"></div>
+                <div class="mobile-logo"> <img src="../assets/images/top-menu/sb_logo.png" alt="menu" class="" style="width:95px"></div>
             </div>
 
 
@@ -669,14 +669,14 @@ Augmented Communication</em>
     <section class="event-gallery">
         <div class="event-gallery-gallery-title">Events Gallery</div>
         <div class="event-gallery-contents">
-            <div class="event-gallery-gallery-images"><img src="/assets/images/gallery/_NZ66050.jpg" alt=""></div>
-            <div class="event-gallery-gallery-images"><img src="/assets/images/gallery/_NZ66467.jpg" alt=""></div>
-            <div class="event-gallery-gallery-images"><img src="/assets/images/gallery/_NZ66604.jpg" alt=""></div>
-            <div class="event-gallery-gallery-images"><img src="/assets/images/gallery/_NZ66702.jpg" alt=""></div>
-            <div class="event-gallery-gallery-images"><img src="/assets/images/gallery/_NZ66816.jpg" alt=""></div>
-            <div class="event-gallery-gallery-images"><img src="/assets/images/gallery/_NZ67059.jpg" alt=""></div>
-            <div class="event-gallery-gallery-images"><img src="/assets/images/gallery/_NZ66050.jpg" alt=""></div>
-            <div class="event-gallery-gallery-images"><img src="/assets/images/gallery/_NZ66702.jpg" alt=""></div>
+            <div class="event-gallery-gallery-images"><img src="../assets/images/gallery/_NZ66050.jpg" alt=""></div>
+            <div class="event-gallery-gallery-images"><img src="../assets/images/gallery/_NZ66467.jpg" alt=""></div>
+            <div class="event-gallery-gallery-images"><img src="../assets/images/gallery/_NZ66604.jpg" alt=""></div>
+            <div class="event-gallery-gallery-images"><img src="../assets/images/gallery/_NZ66702.jpg" alt=""></div>
+            <div class="event-gallery-gallery-images"><img src="../assets/images/gallery/_NZ66816.jpg" alt=""></div>
+            <div class="event-gallery-gallery-images"><img src="../assets/images/gallery/_NZ67059.jpg" alt=""></div>
+            <div class="event-gallery-gallery-images"><img src="../assets/images/gallery/_NZ66050.jpg" alt=""></div>
+            <div class="event-gallery-gallery-images"><img src="../assets/images/gallery/_NZ66702.jpg" alt=""></div>
         </div>
     </section>
 
