--- a/client/home1.html
+++ b/client/home1.html
@@ -191,10 +191,10 @@
         <a href="#" data-dropdown="dropdown1"><span class="material-icons text-secondary mx-3 my-3 notranslate" >book</span> <span style="display: inline-block;width:200px">Education and Certification</span> <span class="material-icons text-secondary mx-3 my-3 notranslate" >keyboard_arrow_down</span></a>
 
         <ul class="dropdown-sidemenu" id="dropdown1">
-            <li onclick="window.location.assign('/client/sltneurological.html')" class="dropdown-sidemenu-item">Neurological</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/client/slthearing.html')">Hearing Impairement</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/client/sltaac.html')">AAC</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/client/sltdld.html')">DLD</li>
+            <li onclick="window.location.assign('/speechbase/client/sltneurological.html')" class="dropdown-sidemenu-item">Neurological</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/slthearing.html')">Hearing Impairement</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/sltaac.html')">AAC</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/sltdld.html')">DLD</li>
         </ul>
 
 
@@ -202,10 +202,10 @@
         <a href="#" data-dropdown="dropdown2"><span class="material-icons text-secondary mx-3 my-3 notranslate" >manage_accounts</span> <span style="display: inline-block;width:200px">Affected people and Relatives</span><span class="material-icons text-secondary mx-3 my-3 notranslate" >keyboard_arrow_down</span></a>
 
         <ul class="dropdown-sidemenu" id="dropdown2">
-            <li onclick="window.location.assign('/client/cgneurological.html')" class="dropdown-sidemenu-item">Neurological</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/client/cghearing.html')">Hearing Impairement</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/client/cgaac.html')">AAC</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/client/sltdld.html')">DLD</li>
+            <li onclick="window.location.assign('/speechbase/client/cgneurological.html')" class="dropdown-sidemenu-item">Neurological</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/cghearing.html')">Hearing Impairement</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/cgaac.html')">AAC</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/sltdld.html')">DLD</li>
         </ul>
         <a href="#"><span class="material-icons text-secondary mx-3 my-3 notranslate" >manage_accounts</span> <span>Advocacy, Community and Network</span></a>
         <a href="#"><span class="material-icons text-secondary mx-3 my-3 notranslate" >manage_accounts</span> <span>Policy and Decision makers</span></a>
@@ -297,8 +297,8 @@ Augmented Communication</em>
                 </p>
                 <p style="text-align: center;color:#E9911A;margin-top: -1rem;font-size: 1.2rem;">Choose category below to get information</p>
                 <p style="display: flex;justify-content:center;gap:2em;margin-bottom:30px">
-                    <button class="caregive-button" onclick="window.location.assign('/client/caregiverintro.html')">Affected Person</button>
-                    <button class="slt-button" onclick="window.location.assign('/client/sltProfessionalIntro.html')">SLT Professional</button>
+                    <button class="caregive-button" onclick="window.location.assign('speechbase/client/caregiverintro.html')">Affected Person</button>
+                    <button class="slt-button" onclick="window.location.assign('speechbase/client/sltProfessionalIntro.html')">SLT Professional</button>
                 </p>
                 <p style="text-align: center;font-weight:400;color:#F5E9DE;font-size:1.1rem;cursor:pointer;margin-top: -0.7rem;" onclick="window.location.assign('/client/aboutus.html')">
                     About Us <i class="fa fa-long-arrow-right"></i>
