modify javascript link

--- a/client/home1.html
+++ b/client/home1.html
@@ -191,10 +191,10 @@
         <a href="#" data-dropdown="dropdown1"><span class="material-icons text-secondary mx-3 my-3 notranslate" >book</span> <span style="display: inline-block;width:200px">Education and Certification</span> <span class="material-icons text-secondary mx-3 my-3 notranslate" >keyboard_arrow_down</span></a>
 
         <ul class="dropdown-sidemenu" id="dropdown1">
-            <li onclick="window.location.assign('/speechbase/client/sltneurological.html')" class="dropdown-sidemenu-item">Neurological</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/slthearing.html')">Hearing Impairement</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/sltaac.html')">AAC</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/sltdld.html')">DLD</li>
+            <li onclick="window.location.assign('./sltneurological.html')" class="dropdown-sidemenu-item">Neurological</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('./slthearing.html')">Hearing Impairement</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('./sltaac.html')">AAC</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('./sltdld.html')">DLD</li>
         </ul>
 
 
@@ -202,10 +202,10 @@
         <a href="#" data-dropdown="dropdown2"><span class="material-icons text-secondary mx-3 my-3 notranslate" >manage_accounts</span> <span style="display: inline-block;width:200px">Affected people and Relatives</span><span class="material-icons text-secondary mx-3 my-3 notranslate" >keyboard_arrow_down</span></a>
 
         <ul class="dropdown-sidemenu" id="dropdown2">
-            <li onclick="window.location.assign('/speechbase/client/cgneurological.html')" class="dropdown-sidemenu-item">Neurological</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/cghearing.html')">Hearing Impairement</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/cgaac.html')">AAC</li>
-            <li class="dropdown-sidemenu-item" onclick="window.location.assign('/speechbase/client/sltdld.html')">DLD</li>
+            <li onclick="window.location.assign('./cgneurological.html')" class="dropdown-sidemenu-item">Neurological</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('./cghearing.html')">Hearing Impairement</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('./cgaac.html')">AAC</li>
+            <li class="dropdown-sidemenu-item" onclick="window.location.assign('./sltdld.html')">DLD</li>
         </ul>
         <a href="#"><span class="material-icons text-secondary mx-3 my-3 notranslate" >manage_accounts</span> <span>Advocacy, Community and Network</span></a>
         <a href="#"><span class="material-icons text-secondary mx-3 my-3 notranslate" >manage_accounts</span> <span>Policy and Decision makers</span></a>
