updating slt and caregiver buttons

--- a/client/home1.html
+++ b/client/home1.html
@@ -297,8 +297,8 @@ Augmented Communication</em>
                 </p>
                 <p style="text-align: center;color:#E9911A;margin-top: -1rem;font-size: 1.2rem;">Choose category below to get information</p>
                 <p style="display: flex;justify-content:center;gap:2em;margin-bottom:30px">
-                    <button class="caregive-button" onclick="window.location.assign('speechbase/client/caregiverintro.html')">Affected Person</button>
-                    <button class="slt-button" onclick="window.location.assign('speechbase/client/sltProfessionalIntro.html')">SLT Professional</button>
+                    <button class="caregive-button" onclick="window.location.assign('./caregiverintro.html')">Affected Person</button>
+                    <button class="slt-button" onclick="window.location.assign('./sltProfessionalIntro.html')">SLT Professional</button>
                 </p>
                 <p style="text-align: center;font-weight:400;color:#F5E9DE;font-size:1.1rem;cursor:pointer;margin-top: -0.7rem;" onclick="window.location.assign('/client/aboutus.html')">
                     About Us <i class="fa fa-long-arrow-right"></i>
