--- a/client/home1.html
+++ b/client/home1.html
@@ -289,16 +289,16 @@
         <div class="hero-section-contents">
 
             <div class="hero-section-content1" style="margin-bottom: 2rem !important;">
-                <h3 style="text-align: center;color:#f6f3f3;font-size:2.5em;font-weight:500">Learn and help Others</h3>
+                <h3 style="text-align: center;color:#f6f3f3;font-size:2.5em;font-weight:500">Our Mission</h3>
                 <p style="text-align: center;color:rgb(240, 239, 239);font-size:1.2rem;font-weight:300;letter-spacing: .02rem;">
-                    We educate you on how to deal with different impairments and disorders on <em>Neurological,
-Hearing, Language Developmental and 
-Augmented Communication</em>
+                    With joint efforts we serve all people in Africa with hearing, swallowing and communication disorders.
                 </p>
                 <p style="text-align: center;color:#E9911A;margin-top: -1rem;font-size: 1.2rem;">Choose category below to get information</p>
                 <p style="display: flex;justify-content:center;gap:2em;margin-bottom:30px">
                     <button class="caregive-button" onclick="window.location.assign('./caregiverintro.html')">Affected Person</button>
                     <button class="slt-button" onclick="window.location.assign('./sltProfessionalIntro.html')">SLT Professional</button>
+                    <button class="caregive-button" onclick="window.location.assign('{{url('#')}}')" >SLT Science</button>
+                <button class="slt-button" onclick="window.location.assign('{{url('#')}}')" >Education and Certification</button>
                 </p>
                 <p style="text-align: center;font-weight:400;color:#F5E9DE;font-size:1.1rem;cursor:pointer;margin-top: -0.7rem;" onclick="window.location.assign('/client/aboutus.html')">
                     About Us <i class="fa fa-long-arrow-right"></i>
